--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "diabeto",
+  "name": "rizzly",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@firebase/firestore": "^4.4.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
@@ -22,7 +23,6 @@
     "dotenv": "^16.3.1",
     "expo": "^49.0.21",
     "expo-av": "~13.4.1",
-    "expo-checkbox": "~2.4.0",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.12",
     "expo-font": "~11.4.0",
@@ -31,37 +31,39 @@
     "expo-router": "^2.0.4",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.6.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-dotenv": "^3.4.9",
     "react-native-draggable-flatlist": "^4.0.1",
-    "react-native-draggable-grid": "^2.1.8",
     "react-native-elements": "^3.4.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-maps": "1.7.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.8.3",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-select-dropdown": "^3.4.0",
-    "react-native-svg": "13.9.0",
+    "react-native-svg": "^13.14.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.2",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "victory-native": "^36.8.4",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react-native-keyboard-spacer": "^0.4.6"
+    "@babel/core": "^7.20.0"
   },
   "android": {
-    "package": "com.ronbutan.Diabeto"
+    "package": "com.ronbutan.Rizzly"
   },
   "private": true
 }
