--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@firebase/firestore": "^4.4.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-native-community/datetimepicker": "^7.6.2",
-    "@react-native-picker/picker": "^2.6.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
@@ -45,11 +45,11 @@
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "^1.8.3",
+    "react-native-maps": "1.7.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-select-dropdown": "^3.4.0",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "13.9.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.2",
     "react-redux": "^8.1.3",
