--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dotenv": "^16.3.1",
     "expo": "^49.0.21",
     "expo-av": "~13.4.1",
-    "expo-checkbox": "^2.7.0",
+    "expo-checkbox": "~2.4.0",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.12",
     "expo-font": "~11.4.0",
