--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dotenv": "^16.3.1",
     "expo": "^49.0.21",
     "expo-av": "~13.4.1",
-    "expo-checkbox": "~2.4.0",
+    "expo-checkbox": "^2.7.0",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.12",
     "expo-font": "~11.4.0",
@@ -38,26 +38,19 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-dotenv": "^3.4.9",
-    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-draggable-grid": "^2.1.8",
     "react-native-elements": "^3.4.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-gifted-chat": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-maps": "1.7.1",
-    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-svg": "13.9.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.2",
-    "react-redux": "^8.1.3",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
     "typescript": "^5.1.3",
     "victory-native": "^36.8.4"
   },
